--- a/FitBoard/LandingPage.html
+++ b/FitBoard/LandingPage.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>FitBoard</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="LandingPage.css">
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-        <link rel="icon" href="favicon.ico">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    </head>
-    <body>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>FitBoard</title>
+    <meta name="description" content="FitBoard - Enhancing Health and Fitness for SBHS Students">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="LandingPage.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+</head>
+<body>
 
-        <!--Navigation bar Code-->   
-        <nav>
+<!-- Navigation bar Code -->
+<nav>
     <input id="nav-toggle" type="checkbox">
     <div class="logo">
         <img src="../Images/Logo.png" alt="logo" width="50px" height="50px">FIT<strong>BOARD</strong>
@@ -22,9 +23,9 @@
     <ul class="links">
         <li><a href="#Home">Home</a></li>
         <li><a href="#About">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#Contact">Contact</a></li>
         <li><a href="../Home_Page/Login_Page.html">Staff Login</a></li>
-        <li><a href="../index.php">Login</a></li> <!-- Updated the href attribute to point to index.php -->
+        <li><a href="student_auth.php">Student Login</a></li> <!-- Updated the href attribute to point to index.php -->
     </ul>
     <label for="nav-toggle" class="icon-burger">
         <div class="line"></div>
@@ -33,36 +34,30 @@
     </label>
 </nav>
 
-        
-        <!--Main title and slogan code-->
-       <section>
+<!-- Main title and slogan code -->
+<section>
     <div class="content" id="Home">
         <div class="info">
-            <h2>Fitboard <br><span>We Strive for fit kids not fat kids</span></h2>
-            <p>Heisenberg was driving along a highway when he got pulled over by a cop. "Do you know how fast you were going?" the ops say. "No, but i know exactly where I am, Heisenberg replies." "You were going 100 ks over the speed limit!" the cop exlaims. "GREAT NOW I'M LOST!" Heisenber shouts. The cop then shot him 28 times in the chest.</p>
-            <a href="../index.php" class="info-btn">Login</a> <!-- Updated the href attribute to point to index.php -->
+            <h2>FitBoard <br><span>Nurturing healthy students since 2024</span></h2>
+            <p>Welcome to FitBoard, where we promote a healthy lifestyle tailored for SBHS students.</p>
+            <a href="student_auth.php" class="info-btn">Student Login</a> <!-- Updated the href attribute to point to index.php -->
         </div>
     </div>
 </section>
 
+<!-- About section code -->
+<div class="about-section" id="About">
+    <h2>About FitBoard</h2>
+    <p>FitBoard is dedicated to improving the fitness and well-being of Sydney Boys High School students. We provide fitness programs and resources to help students achieve their health goals in collaboration with the Weights Room.</p>
+    <p>Our mission is to create a supportive environment where every student can thrive physically and mentally.</p>
+</div>
 
-        <!--about section code-->
-        <div class="about-section" id="About">
-          <h2>About</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor🍚🦐 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          </p>
-        </div>
-        
-        <!--External Links-->
-        <div class="media-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://x.com/FitBoardOffical"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-        </div>
+<!-- External Links -->
+<div class="media-icons">
+    <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+</div>
 
-    </body>
+</body>
 </html>
