--- a/FitBoard/Home_Page/Home_Page.html
+++ b/FitBoard/Home_Page/Home_Page.html
@@ -4,7 +4,6 @@
     <!-- #region head (stylesheets and refs) -->
 
     <head>
-
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>FitBoard</title>
@@ -22,6 +21,139 @@
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
+        <style>
+            /* Styling for the program-container */
+            .program-container {
+                max-width: 1200px;
+                margin: 20px auto;
+                padding: 20px;
+                background-color: #fff;
+                border-radius: 8px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                font-family: 'Montserrat', sans-serif;
+            }
+
+            .program-container h1 {
+                text-align: center;
+                font-size: 24px;
+                margin-bottom: 10px;
+                color: #333;
+            }
+
+            .program-container button {
+                display: block;
+                width: 20%;
+                padding: 10px;
+                background-color: #007BFF;
+                color: #fff;
+                border: none;
+                font-size: 16px;
+                cursor: pointer;
+                margin-bottom: 20px;
+                transition: background-color 0.3s;
+            }
+
+            .program-container button:hover {
+                background-color: #0056b3;
+            }
+
+            .program-container select {
+                width: 30%;
+                padding: 10px;
+                margin-bottom: 20px;
+                font-size: 16px;
+            }
+
+            .program-container .print-download {
+                display: flex;
+                width: 45%;
+                align-items: center;
+                justify-content: center;
+                margin-top: 20px;
+            }
+
+            .program-container .print-download label {
+                margin-right: 10px;
+                margin-bottom: 10px;
+                font-size: 16px;
+                color: #333;
+            }
+
+            .program-container .print-download select {
+                padding: 10px;
+                font-size: 16px;
+                margin-right: 10px;
+            }
+
+            .program-container .print-download button {
+                background-color: #28a745;
+                border: none;
+                color: #fff;
+                padding: 10px 20px;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 16px;
+                transition: background-color 0.3s;
+            }
+
+            .program-container .print-download button:hover {
+                background-color: #218838;
+            }
+
+            #programDetails {
+                margin-top: 20px;
+                padding: 20px;
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+            }
+
+            .day {
+                margin-bottom: 20px;
+            }
+
+            h2 {
+                background-color: #007BFF;
+                color: #fff;
+                padding: 10px;
+                margin: 0;
+            }
+
+            table {
+                width: 100%;
+                border-collapse: collapse;
+                margin-top: 10px;
+            }
+
+            th, td {
+                padding: 10px;
+                border: 1px solid #ddd;
+                text-align: left;
+            }
+
+            th {
+                background-color: #f4f4f4;
+            }
+
+            
+    @media print {
+    body * {
+        visibility: hidden;
+    }
+    #programDetails, #programDetails * {
+        visibility: visible;
+    }
+    #programDetails {
+        position: absolute;
+        left: 0; /* Adjust this value to move the content further to the left */
+        top: 0;
+        width: 100%; /* Ensure it takes full width */
+        margin: 0; /* Ensure no extra margins */
+    }
+}
+
+
+        </style>
     </head>  <!-- #endregion -->
 
     <!-- #region main -->
@@ -111,11 +243,36 @@
      <!-- #endregion -->
 
     <!-- Main Content -->
+  
     <div class="main_content">
-        <div class="container" id="container">
-            <h1 id="sub-heading">Dashboard</h1>
+    <div class="container" id="container">
+        <h1 id="sub-heading">Dashboard</h1>
             <h1 id="main-heading">FitBoard</h1>
-            <h3>&#160&#160Dashboard</h3>      
+            <h3>&#160&#160Dashboard</h3>    
+    </div>
+
+    <!-- Toggle Container with Label and Switch -->
+    <div class="program-container">
+
+        
+        <h1>View Program</h1>
+
+        <!-- Program selection dropdown -->
+        <select id="programSelect" onchange="fetchProgramDetails()">
+            <option value="" disabled selected>Select a program</option>
+        </select>
+
+        <!-- Program details container -->
+        <div id="programDetails"></div>
+
+        <!-- Print/Download button -->
+        <div class="print-download">
+            <label for="printDownloadSelect">Choose an option:</label>
+            <select id="printDownloadSelect">
+                <option value="print">Print</option>
+                <option value="download">Download as PDF</option>
+            </select>
+            <button id="printDownloadButton">Go</button>
         </div>
     </div>
 
@@ -124,7 +281,9 @@
     <script src="Activite_Sidebar.js"></script>
     <script src="../Profile/Profile_Pic.js"></script>
     <script src="../Profile/Profile_Check.js"></script>
-      <script src="../Settings/colour_slider.js"></script>
+    <script src="../Settings/colour_slider.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <script src="view_program.js"></script>
 
     <script>
         function onload() {
