--- a/FitBoard/Program Modification/Program Modification.html
+++ b/FitBoard/Program Modification/Program Modification.html
@@ -245,26 +245,8 @@
     <script src="../Profile/Profile_Check.js?v=1.0"></script>
     <script src="../Settings/colour_slider.js?v=1.0"></script>
     <script src="Program Modification.js?v=1.2"></script>
+ <script src="../update_sidebar_role.js"></script>
 
-    <script>
-        function onload() {
-           
-            var accessLevel = localStorage.getItem('accessLevel');
-            var userNameElement = document.getElementById('userName');
-            var userRoleElement = document.getElementById('userRole');
-            
-            if (accessLevel === '1') {
-                userNameElement.textContent = 'Rurt&#160Kich';
-                userRoleElement.textContent = 'Admin';
-            } else if (accessLevel === '0') {
-                var studentData = JSON.parse(localStorage.getItem('studentData'));
-                if (studentData && studentData.givenName && studentData.surname) {
-                    userNameElement.textContent = studentData.givenName + '\u00A0' + studentData.surname;
-                    userRoleElement.textContent = 'Student';
-                }
-            }
-        }
-    </script>
 
     <!--#endregion-->
 
